# Chess-Engine

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  fetch-release.sh  release-build.sh
.claude/: settings.local.json
.github/workflows/: release.yml
backend/: .env.example  .gitignore  CMakeLists.txt  Dockerfile  app.py  build.js  drizzle.config.js  fen_test.py  game_manager.py  init_db.py  lichess_api.py  mock_chess_engine.py  models.py  package.json  requirements.txt  setup.py  test_chess_engine.py  test_db_connection.py  test_engine.py  test_make_move.py  verify_paths.py
backend/analysis/: models.py  urls.py  views.py
backend/app/: __init__.py  app.py  engine_manager.py  main.py  settings.py  urls.py  wsgi.py
backend/db/: db.js  schema.js  schema.sql
backend/db/migrations/: 0000_luxuriant_nebula.sql  0000_sharp_white_tiger.sql
backend/db/migrations/meta/: 0000_snapshot.json  _journal.json
backend/engine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ChessEngine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  __init__.py  cmake_install.cmake  engine.py  engine.vcxproj  engine.vcxproj.filters
backend/engine/include/: board.h  engine.h  evaluator.h  move.h  piece.h  player.h
backend/engine/src/: bindings.cpp  board.cpp  engine.cpp  evaluator.cpp  main.cpp  move.cpp  piece.cpp  player.cpp  test_engine.cpp  test_set_board_from_fen.cpp
backend/game/: models.py  urls.py  views.py
backend/src/: apiTransport.js  discordBot.js  engineManager.js  lichessBot.js  notifier.js  openings.js  server.js
backend/src/scripts/: build.js  buildEngine.js  downloadBook.js  runTourney.js  setup_cutie.js
backend/src/storage/: baseline_1000_games.pgn  baseline_1000_games_2026-03-16_21-14-41.pgn  baseline_1000_games_2026-03-16_21-23-52.pgn  baseline_1000_games_2026-03-16_21-24-45.pgn  baseline_1000_games_2026-03-16_21-31-18.pgn  tournament_2026-03-16_21-49-37.pgn  tournament_2026-03-16_21-55-15.pgn
backend/storage/: tournament_2026-03-16_21-55-15.pgn
backend/tests/: apiTransport.test.js  engineManager.test.js  gameAnalyzer.test.js  lichess.test.js  lichessRateLimitCache.test.js  openings.test.js  server.test.js
backend/user/: models.py  urls.py  views.py
deploy/systemd/: chess-engine-dev.service  chess-engine.service  dev.env.example  prod.env.example
engine/: CMakeLists.txt  board.cpp  board.h  build.sh  engine.cpp  engine.h  engine_backup.py  engine_pybind.cpp  evaluator.cpp  evaluator.h  main.cpp  move.cpp  move.h  types.h
engine/include/: board.h  engine.h  evaluator.h  main.h  move.h  search.h  transpositionTable.h  types.h
engine/src/: bindings.cpp  board.cpp  engine.cpp  engine_pybind.cpp  evaluator.cpp  main.cpp  move.cpp  search.cpp  test_engine.cpp  timeman.cpp  transpositionTable.cpp
engines/myengine/: .gitignore  CMakeLists.txt  Cerebellum Light license.rtf  README.TXT  __init__.py  build.sh  checkout-build.sh  checkout-latest.sh  list-versions.sh  myengine.txt  tag-release.sh  test.sh  version-build.sh
engines/myengine/.github/workflows/: release.yml
engines/myengine/builds/v1.0.0/: Makefile  test_board_move  test_search  test_tt
engines/myengine/builds/v1.0.1/: CMakeCache.txt  test_eval
engines/myengine/engines/myengine/v1.0.0/: CMakeCache.txt  CTestTestfile.cmake
engines/myengine/include/: bench.h  board.h  evaluator.h  main.h  search.h  timeManager.h  timeman.h  transpositionTable.h
engines/myengine/scripts/: build.sh  checkout-build.sh  ci.sh  tag-release.sh  test.sh
engines/myengine/src/: bench.cpp  bindings.cpp  board.cpp  book.cpp  engine.cpp  evaluator.cpp  main.cpp  search.cpp  timeManager.cpp  transpositionTable.cpp
engines/myengine/tests/: board_move_tests.cpp  book_test.cpp  eval_test.cpp  search_test.cpp  time_manager_test.cpp  tt_test.cpp
engines/myengine/tests/Performance/: board_move_performance.cpp
engines/myengine/v1.0.0/: cmake_install.cmake  test_eval  test_tt
frontend/: .env  .gitignore  Dockerfile  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  Main.jsx
frontend/src/components/: Chessboard.js  Chessboard.jsx  Sidebar.jsx  board.js  gameControls.js  gameControls.jsx  playerForm.js  playerForm.jsx
frontend/src/context/: BotContext.jsx
frontend/src/layouts/: Default.jsx
frontend/src/pages/: Game.jsx  Home.jsx  LichessPage.jsx  _document.js  index.js
frontend/src/pages/game/: [id].js
frontend/src/services/: api.js
tests/: test_backend.py  test_engine.py  test_engine_eval.py
tests/engine/: board_move_tests.cpp  eval_test.cpp  search_test.cpp  tt_test.cpp
tests/myengine/: board_move_tests.cpp  eval_test.cpp  search_test.cpp  test_engine.py  tt_test.cpp
